beginning lab links

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 2 - HTML & CSS Starter</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,15 +23,15 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 2 - HTML & CSS Starter</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>With a partner, creat a basic HTML and CSS style file, editing and inspecting it according to guidelines.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<p>Some misunderstandings happened while coding, as the use of shortcuts tripped up the process. Additionally, there were some difficulties in the CSS, only due to lack of fmailiarity. No # was placed in front of content, as I thought it would make it into a coment like in python. </p>
 			</div>
 
 			<div class="minor-section">
