--- a/lab2/index.html
+++ b/lab2/index.html
@@ -26,12 +26,15 @@
 			<h1>Lab 2 - HTML & CSS Starter</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>With a partner, creat a basic HTML and CSS style file, editing and inspecting it according to guidelines.</p>
+					<p>With a partner, create a basic HTML and CSS style file, editing and inspecting it according to guidelines.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>Some misunderstandings happened while coding, as the use of shortcuts tripped up the process. Additionally, there were some difficulties in the CSS, only due to lack of fmailiarity. No # was placed in front of content, as I thought it would make it into a coment like in python. </p>
+					<p>Some misunderstandings happened while coding, as the use of shortcuts tripped up the process. 
+						Additionally, there were some difficulties in the CSS, only due to lack of familiarity. No # was placed in front of content, as I thought it would make it into a comment like in python. 
+						Task X was also difficult to complete as there needed to be changes to the indexes to link together the multiple labs, which wasn't done in advance. THerefore some searching was
+						needed to be done in order to learn how to link to other html files in the same repository.</p>
 			</div>
 
 			<div class="minor-section">
@@ -41,11 +44,12 @@
 
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output"></div>
+					<div id="output"><a href="index2.html">Link to Result</a></div>
 			</div>
 		</section>
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
+			<a href="https://yacobjee.github.io/art101/">Homepage</a> 
 		</nav>
 	</main>
 </body>
