--- a/lab2/index2.html
+++ b/lab2/index2.html
@@ -18,6 +18,9 @@
                 Apparently he has a dream of becoming a chef one day as well as a videogame designer, and if neither of those is in the cards he wouldn't mind being a stay-at-home dad. 
                 Despite being introverted (similar to me), he’s a really friendly person who can get along with anyone and always prioritizes others’ happiness before his own. He’s a pretty good guy!</p>
         </div>
+        <nav id="links">
+			<!-- Put links to labs here. -->
+			<a href="lab2/index.html">Lab 2</a>
     </body>
 
 
