fully linked frtt

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		</section>
 		<nav id="links">
 			<!-- Put links to labs here. -->
+			<a href="https://yacobjee.github.io/art101/">Homepage</a> 
 			<a href="lab2/index.html">Lab 2</a>
 		</nav>
 	</main>
