--- a/lab2/index2.html
+++ b/lab2/index2.html
@@ -20,7 +20,9 @@
         </div>
         <nav id="links">
 			<!-- Put links to labs here. -->
-			<a href="lab2/index.html">Lab 2</a>
+			<a href="https://yacobjee.github.io/art101/">Homepage</a> 
+            <a href="index.html">Lab 2</a>
+            
     </body>
 
 
