--- a/lab2/index.html
+++ b/lab2/index.html
@@ -39,7 +39,9 @@
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>For my first taste of html in a long time, I honestly had a lot of fun with this. There were difficulties, but I'm glad I was able to work through them, 
+						and that my partner also helped me when there were some issues, and vice versa. I'm honestly curious as for what's to come, as while I didn't do a lot CSS-wise,
+						I want to see what I can do with more complicated things and when actual coding is involved.</p>
 			</div>
 
 			<div class="minor-section">
