--- a/index.html
+++ b/index.html
@@ -25,15 +25,31 @@
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
 					<img class="cat-photo" src="./img/Struggle.jpg">
+					<img class="my-portrait" src="./img/portrait.jpg">
 					<h2>About Me</h2>
-					<p>I'm Jacob, a 2D artist and a writer who constantly forgets how to do both. its a horrible and painful existence.</p>
+					<p>I'm Jacob, a 2D artist and a writer who constantly forgets how to do both. I'm from the Bay Area, currently enrolled in UCSC's AGPM major. Most of my art comes in the form of anime
+						and hopefully semi-realisitc in the future (when i get better at both and stop stumbling over myself). I'm also learning how to animate, and also Blender. My main mediums come in 
+						the form of Clip Studio Paint and Paint Tool SAI, though I haven't used the latter in years. My dream is to both fully develop and draw an entire game by myself, without any 
+						team to help out.</p>
+			</div>
+			<div class="assignments-major-section">
+				<h2>Lab Links (HTML)</h2>
+				<ul>
+					<li><a href="lab2/index.html">Lab 2 - HTML & CSS St    arter</a></li>
+					<li><a href="lab3/index.html">Lab 3 - File Structure & File Transfer</a></li>
+					<li><a href="lab4/index.html">Lab 4 - TBA</a></li>
+					<li><a href="lab5/index.html">Lab 5 - TBA</a></li>
+					<li><a href="lab6/index.html">Lab 6 - TBA</a></li>
+
+				</ul>
 			</div>
 
 		</section>
 		<nav id="links">
 			<!-- Put links to labs here. -->
 			<a href="https://yacobjee.github.io/art101/">Homepage</a> 
-			<a href="lab2/index.html">Lab 2</a>
+			<a href="https://yacobjee.github.io/art101/lab2">Lab 2</a>
+			<a href="https://yacobjee.github.io/art101/lab3">Lab 3</a>
 		</nav>
 	</main>
 </body>
