--- a/lab3/index.html
+++ b/lab3/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 3 - File Structure & File Transfer</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,29 +23,45 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 3 - File Structure & File Transfer</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>Create a local, organized file structure, add index.html files, and upload it to the server</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<p>There weren't many problems, aside from self imposed ones in trying to go beyond and make the homepage more to my style. Eventually they were either resolved or
+						the ideas were abandoned in favor of completeness. Additionally, the simpleness minimized partner work.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>This lab went incredibly smoothly, mostly because the lab was already completed in the template. There were some things added, but i personally didn't put a lot of effort into 
+						making astonishing changes or demonstrated exceptional work, but at least I now understand how iterating through files works. It'll come in handy when coding concepts like loops and
+						recursion come into play. </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output"></div>
+					<div id="output">
+						<img class="screenshots" src="./img/file-structure.jpg">
+						<p>File structure, organized correctly</p>
+						<img class="screenshots" src="./img/homepage-index.jpg">
+						<p>HTML of the homepage</p>
+						<img class="screenshots" src="./img/homepage.jpg">
+						<p>How the homepage looks on local</p>
+						<img class="screenshots" src="./img/lab3-index.jpg">
+						<p>HTML of Lab 3</p>
+					</div>
 			</div>
 		</section>
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
+			<a href="https://yacobjee.github.io/art101/">Homepage</a> 
+			<a href="https://yacobjee.github.io/art101/lab2">Lab 2</a>
+			<a href="https://yacobjee.github.io/art101/lab3">Lab 3</a>
 		</nav>
 	</main>
 </body>
