--- a/lab2/index.html
+++ b/lab2/index.html
@@ -52,7 +52,7 @@
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
 			<a href="https://yacobjee.github.io/art101/">Homepage</a> 
-			<a href="index.html">Lab 2</a>
+			<a href="https://yacobjee.github.io/art101/lab2">Lab 2</a>
 		</nav>
 	</main>
 </body>
