lab 3 finishing touches

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -46,13 +46,14 @@
 
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output"><a href="index2.html">Link to Result</a></div>
+					<div id="output"><a href="https://yacobjee.github.io/art101/lab2/index2.html">Link to Result</a></div>
 			</div>
 		</section>
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
 			<a href="https://yacobjee.github.io/art101/">Homepage</a> 
 			<a href="https://yacobjee.github.io/art101/lab2">Lab 2</a>
+			<a href="https://yacobjee.github.io/art101/lab3">Lab 3</a>
 		</nav>
 	</main>
 </body>
