--- a/lab2/index2.html
+++ b/lab2/index2.html
@@ -21,7 +21,8 @@
         <nav id="links">
 			<!-- Put links to labs here. -->
 			<a href="https://yacobjee.github.io/art101/">Homepage</a> 
-            <a href="index.html">Lab 2</a>
+            <a href="https://yacobjee.github.io/art101/lab2">Lab 2</a>
+            <a href="https://yacobjee.github.io/art101/lab3">Lab 3</a>
             
     </body>
 
