--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<ul>
 					<li><a href="lab2/index.html">Lab 2 - HTML & CSS Starter</a></li>
 					<li><a href="lab3/index.html">Lab 3 - File Structure & File Transfer</a></li>
-					<li><a href="lab4/index.html">Lab 4 - TBA</a></li>
+					<li><a href="lab4/index.html">Lab 4 - Psuedocode & Problem Solving</a></li>
 					<li><a href="lab5/index.html">Lab 5 - TBA</a></li>
 					<li><a href="lab6/index.html">Lab 6 - TBA</a></li>
 
@@ -50,6 +50,7 @@
 			<a href="https://yacobjee.github.io/art101/">Homepage</a> 
 			<a href="https://yacobjee.github.io/art101/lab2">Lab 2</a>
 			<a href="https://yacobjee.github.io/art101/lab3">Lab 3</a>
+			<a href="https://yacobjee.github.io/art101/lab4">Lab 4</a>
 		</nav>
 	</main>
 </body>
