--- a/lab3/index.html
+++ b/lab3/index.html
@@ -62,6 +62,7 @@
 			<a href="https://yacobjee.github.io/art101/">Homepage</a> 
 			<a href="https://yacobjee.github.io/art101/lab2">Lab 2</a>
 			<a href="https://yacobjee.github.io/art101/lab3">Lab 3</a>
+			<a href="https://yacobjee.github.io/art101/lab4">Lab 4</a>
 		</nav>
 	</main>
 </body>
