--- a/lab5/index.html
+++ b/lab5/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 5 - Data Tyes & Variables</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -22,30 +22,43 @@
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
+		
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 5 - Data Tyes & Variables</h1>
+			<img class="screenshots" src="./img/hondacrv.jpg">
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>Work with javascript datatypes and variables.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<p>There was some confusion on how to make an image float to the right, and also whether putting "var" before every first instance of a variable was needed.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>Honestly there wasn't much to do for this assignment. Most of it was stuff I've worked with before in python, however I'm suprised how forgiving java is.
+						It can tell when you want to subtract integers even if one is written as an int and the other a string. That's suprising compared to python which will
+						straight up break. I'm interested to see the other differences and how much easier or harder this new language will be. </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output"></div>
+					<div id="output">
+						<h3>Script Output</h3>
+
+						<script type="text/javascript" src="js/lab.js"></script>
+					</div>
 			</div>
 		</section>
 		<nav id="links">
-			<!-- Put links to other pages (including the homepage) here. -->
+			<!-- Put links to labs here. -->
+			<a href="https://yacobjee.github.io/art101/">Homepage</a> 
+			<a href="https://yacobjee.github.io/art101/lab2">Lab 2</a>
+			<a href="https://yacobjee.github.io/art101/lab3">Lab 3</a>
+			<a href="https://yacobjee.github.io/art101/lab4">Lab 4</a>
+			<a href="https://yacobjee.github.io/art101/lab5">Lab 5</a>
 		</nav>
 	</main>
 </body>
