--- a/lab6/index.html
+++ b/lab6/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 6 - Objects & Arrays</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,29 +23,44 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 6 - Objects & Arrays</h1>
+			<img class="screenshots" src="./img/hondacrv.jpg">
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>Work with javascript arrays and objects, while also printing them out.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<p>Aside from basic syntax errors while working in chrome, there was some confusion on how to print out objects neatly. Before seeing the step 
+						(and not knowing how to stringify at first), I tried to just havce it print in console as is, resulting in [object Object]. Apparently, that's normal, since
+						printing objects is a bit troublesome. I resorted to simply hardcoding a shaky sentence, before seeing the next step.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>I came in here still a bit confused about java, doubly so when I found there were a bunch of functions and shortcuts I could use like scriptify. I wanted to 
+						truly get my footing with this assignment, and I think I'm starting to get it. At least with this, I think searching the internet for those extra tags
+						will help a lot.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output"></div>
+					<div id="output">
+						<h3>Script Output</h3>
+
+						<script type="text/javascript" src="js/lab.js"></script>
+					</div>
 			</div>
 		</section>
 		<nav id="links">
-			<!-- Put links to other pages (including the homepage) here. -->
+			<!-- Put links to labs here. -->
+			<a href="https://yacobjee.github.io/art101/">Homepage</a> 
+			<a href="https://yacobjee.github.io/art101/lab2">Lab 2</a>
+			<a href="https://yacobjee.github.io/art101/lab3">Lab 3</a>
+			<a href="https://yacobjee.github.io/art101/lab4">Lab 4</a>
+			<a href="https://yacobjee.github.io/art101/lab5">Lab 5</a>
+			<a href="https://yacobjee.github.io/art101/lab6">Lab 6</a>
 		</nav>
 	</main>
 </body>
