--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 					<li><a href="lab2/index.html">Lab 2 - HTML & CSS Starter</a></li>
 					<li><a href="lab3/index.html">Lab 3 - File Structure & File Transfer</a></li>
 					<li><a href="lab4/index.html">Lab 4 - Psuedocode & Problem Solving</a></li>
-					<li><a href="lab5/index.html">Lab 5 - TBA</a></li>
-					<li><a href="lab6/index.html">Lab 6 - TBA</a></li>
+					<li><a href="lab5/index.html">Lab 5 - Data Tyes & Variables</a></li>
+					<li><a href="lab6/index.html">Lab 6 - Arrays & Objects</a></li>
 
 				</ul>
 			</div>
@@ -51,6 +51,8 @@
 			<a href="https://yacobjee.github.io/art101/lab2">Lab 2</a>
 			<a href="https://yacobjee.github.io/art101/lab3">Lab 3</a>
 			<a href="https://yacobjee.github.io/art101/lab4">Lab 4</a>
+			<a href="https://yacobjee.github.io/art101/lab5">Lab 5</a>
+			<a href="https://yacobjee.github.io/art101/lab6">Lab 6</a>
 		</nav>
 	</main>
 </body>
