--- a/lab2/index.html
+++ b/lab2/index.html
@@ -50,10 +50,13 @@
 			</div>
 		</section>
 		<nav id="links">
-			<!-- Put links to other pages (including the homepage) here. -->
+			<!-- Put links to labs here. -->
 			<a href="https://yacobjee.github.io/art101/">Homepage</a> 
 			<a href="https://yacobjee.github.io/art101/lab2">Lab 2</a>
 			<a href="https://yacobjee.github.io/art101/lab3">Lab 3</a>
+			<a href="https://yacobjee.github.io/art101/lab4">Lab 4</a>
+			<a href="https://yacobjee.github.io/art101/lab5">Lab 5</a>
+			<a href="https://yacobjee.github.io/art101/lab6">Lab 6</a>
 		</nav>
 	</main>
 </body>
