--- a/lab5/index.html
+++ b/lab5/index.html
@@ -59,6 +59,7 @@
 			<a href="https://yacobjee.github.io/art101/lab3">Lab 3</a>
 			<a href="https://yacobjee.github.io/art101/lab4">Lab 4</a>
 			<a href="https://yacobjee.github.io/art101/lab5">Lab 5</a>
+			<a href="https://yacobjee.github.io/art101/lab6">Lab 6</a>
 		</nav>
 	</main>
 </body>
