--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 					<li><a href="lab4/index.html">Lab 4 - Psuedocode & Problem Solving</a></li>
 					<li><a href="lab5/index.html">Lab 5 - Data Tyes & Variables</a></li>
 					<li><a href="lab6/index.html">Lab 6 - Arrays & Objects</a></li>
+					<li><a href="lab6/index.html">Lab 7 - Functions</a></li>
 
 				</ul>
 			</div>
@@ -53,6 +54,7 @@
 			<a href="https://yacobjee.github.io/art101/lab4">Lab 4</a>
 			<a href="https://yacobjee.github.io/art101/lab5">Lab 5</a>
 			<a href="https://yacobjee.github.io/art101/lab6">Lab 6</a>
+			<a href="https://yacobjee.github.io/art101/lab7">Lab 7</a>
 		</nav>
 	</main>
 </body>
