--- a/lab7/index.html
+++ b/lab7/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 6 - Objects & Arrays</title>
+	<title>Lab 7 - Functions</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,34 +23,32 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab 6 - Objects & Arrays</h1>
-			<img class="screenshots" src="./img/hondacrv.jpg">
+			<h1>Lab 7 - Functions</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Work with javascript arrays and objects, while also printing them out.</p>
+					<p>Create a function that takes a user's name and sorts it, then returns the new sorted name.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>Aside from basic syntax errors while working in chrome, there was some confusion on how to print out objects neatly. Before seeing the step 
-						(and not knowing how to stringify at first), I tried to just havce it print in console as is, resulting in [object Object]. Apparently, that's normal, since
-						printing objects is a bit troublesome. I resorted to simply hardcoding a shaky sentence, before seeing the next step.</p>
+					<p>Not many problems arose, as I didn't put myself too much out there this time. I'm aware that capitals and lowers are sorted differently, so I made 
+                        the function lowercase everything. However, I wasn't sure how to adress uppercasing that specific letter again in the sorted list, so i left it alone and just let it lowercase
+                        everything. This doesn't account for names with all caps, however, but at least everything is sorted somewhat.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>I came in here still a bit confused about java, doubly so when I found there were a bunch of functions and shortcuts I could use like scriptify. I wanted to 
-						truly get my footing with this assignment, and I think I'm starting to get it. At least with this, I think searching the internet for those extra tags
-						will help a lot.</p>
+					<p>I mostly went into this assignment hoping t get it done, and try some things out. That's why I at least put in the lowercase method, though I wish I did more.
+                        I didn't exactly address the problems of differentiating between upper and lowercase, and just opted to lower everything and call it a day.
+
+                    </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
 					<div id="output">
-						<h3>Script Output</h3>
-
-						<script type="text/javascript" src="js/lab.js"></script>
-					</div>
+                        <script src="js/lab.js"></script>
+                    </div>
 			</div>
 		</section>
 		<nav id="links">
