--- a/lab2/index2.html
+++ b/lab2/index2.html
@@ -26,6 +26,7 @@
 			<a href="https://yacobjee.github.io/art101/lab4">Lab 4</a>
 			<a href="https://yacobjee.github.io/art101/lab5">Lab 5</a>
 			<a href="https://yacobjee.github.io/art101/lab6">Lab 6</a>
+			<a href="https://yacobjee.github.io/art101/lab7">Lab 7</a>
             
     </body>
 
