--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 					<li><a href="lab4/index.html">Lab 4 - Psuedocode & Problem Solving</a></li>
 					<li><a href="lab5/index.html">Lab 5 - Data Tyes & Variables</a></li>
 					<li><a href="lab6/index.html">Lab 6 - Arrays & Objects</a></li>
-					<li><a href="lab6/index.html">Lab 7 - Functions</a></li>
+					<li><a href="lab7/index.html">Lab 7 - Functions</a></li>
+					<li><a href="lab8/index.html">Lab 8 - Anonymous Functions and Callbacks</a></li>
 
 				</ul>
 			</div>
@@ -55,6 +56,7 @@
 			<a href="https://yacobjee.github.io/art101/lab5">Lab 5</a>
 			<a href="https://yacobjee.github.io/art101/lab6">Lab 6</a>
 			<a href="https://yacobjee.github.io/art101/lab7">Lab 7</a>
+			<a href="https://yacobjee.github.io/art101/lab8">Lab 8</a>
 		</nav>
 	</main>
 </body>
