--- a/lab6/index.html
+++ b/lab6/index.html
@@ -55,6 +55,7 @@
 		</section>
 		<nav id="links">
 			<!-- Put links to labs here. -->
+			<!-- Put links to labs here. -->
 			<a href="https://yacobjee.github.io/art101/">Homepage</a> 
 			<a href="https://yacobjee.github.io/art101/lab2">Lab 2</a>
 			<a href="https://yacobjee.github.io/art101/lab3">Lab 3</a>
@@ -62,6 +63,7 @@
 			<a href="https://yacobjee.github.io/art101/lab5">Lab 5</a>
 			<a href="https://yacobjee.github.io/art101/lab6">Lab 6</a>
 			<a href="https://yacobjee.github.io/art101/lab7">Lab 7</a>
+			<a href="https://yacobjee.github.io/art101/lab8">Lab 8</a>
 		</nav>
 	</main>
 </body>
