--- a/lab8/index.html
+++ b/lab8/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 7 - Functions</title>
+	<title>Lab 8 - Anonymous Functions and Callbacks</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -17,38 +17,36 @@
 	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
-	<script type="text/javascript" src="./js/lab.js" DEFER></script>
+
+	<script src="js/lab.js" defer></script>
 </head>
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab 7 - Functions</h1>
+			<h1>Lab 8 - Anonymous Functions and Callbacks</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Create a function that takes a user's name and sorts it, then returns the new sorted name.</p>
+					<p>Work with annymous functions and callbacks, while also allowing the results to print in html.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>Not many problems arose, as I didn't put myself too much out there this time. I'm aware that capitals and lowers are sorted differently, so I made 
-                        the function lowercase everything. However, I wasn't sure how to adress uppercasing that specific letter again in the sorted list, so i left it alone and just let it lowercase
-                        everything. This doesn't account for names with all caps, however, but at least everything is sorted somewhat.</p>
+					<p>While working with the div: output section to place the javascript results into the html, I wasn't sure how syntax worke dor how to format
+						it correctly. I wasn't sure how to make more in the same innerHTML variable. Turns out all you needed to do was add plus signs and "< br >" within the strings. </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>I mostly went into this assignment hoping t get it done, and try some things out. That's why I at least put in the lowercase method, though I wish I did more.
-                        I didn't exactly address the problems of differentiating between upper and lowercase, and just opted to lower everything and call it a day.
-
-                    </p>
+					<p>This assignment was pretty easy overall, and I even managed to push myself tot ry and properly structure the results into the html instead of 
+						the console alone. I'm interested to see how anonymous functions and callbacks can be used with other methods. </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
 					<div id="output">
-                        <script src="js/lab.js"></script>
-                    </div>
+
+					</div>
 			</div>
 		</section>
 		<nav id="links">
