--- a/lab9/index.html
+++ b/lab9/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 3 - File Structure & File Transfer</title>
+	<title>Lab 9 - Javascript for the Web</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -17,44 +17,33 @@
 	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
-	<script type="text/javascript" src="./js/lab.js" DEFER></script>
+	<script src="js/lab.js" defer></script>
 </head>
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab 3 - File Structure & File Transfer</h1>
+			<h1>Lab 9 - Javascript for the Web</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Create a local, organized file structure, add index.html files, and upload it to the server</p>
+					<p>Work with Javascript and practice DOM manipulation.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>There weren't many problems, aside from self imposed ones in trying to go beyond and make the homepage more to my style. Eventually they were either resolved or
-						the ideas were abandoned in favor of completeness. Additionally, the simpleness minimized partner work.
-					</p>
+					<p>Aside from needing to go back and check on how to format the DOM manipulation and where exactly to start, I didn't have much trouble. I did need to look up how to place 
+						the element before the others with prepend rather than appendChild, but that was pretty simple. </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>This lab went incredibly smoothly, mostly because the lab was already completed in the template. There were some things added, but i personally didn't put a lot of effort into 
-						making astonishing changes or demonstrated exceptional work, but at least I now understand how iterating through files works. It'll come in handy when coding concepts like loops and
-						recursion come into play. </p>
+					<p>To be blunt, DOM manipulation is difficult. I constantly had to look for reference, and had a little trouble figuring out where I was supposed to start even when the instructions
+						were laid out for me. I suppose this will take a little bit of practice, though looking up some extra methods was pretty interesting, like prepend. </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output">
-						<img class="screenshots" src="./img/file-structure.jpg">
-						<p>File structure, organized correctly</p>
-						<img class="screenshots" src="./img/homepage-index.jpg">
-						<p>HTML of the homepage</p>
-						<img class="screenshots" src="./img/homepage.jpg">
-						<p>How the homepage looks on local</p>
-						<img class="screenshots" src="./img/lab3-index.jpg">
-						<p>HTML of Lab 3</p>
-					</div>
+					<div id="output"></div>
 			</div>
 		</section>
 		<nav id="links">
