--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 					<li><a href="lab6/index.html">Lab 6 - Arrays & Objects</a></li>
 					<li><a href="lab7/index.html">Lab 7 - Functions</a></li>
 					<li><a href="lab8/index.html">Lab 8 - Anonymous Functions and Callbacks</a></li>
-					<li><a href="lab9/index.html">Lab 9 - Javasxript for the Web</a></li>
+					<li><a href="lab9/index.html">Lab 9 - Javascript for the Web</a></li>
+					<li><a href="lab10/index.html">Lab 10 - Javascript Events and Forms</a></li>
 
 				</ul>
 			</div>
@@ -59,6 +60,7 @@
 			<a href="https://yacobjee.github.io/art101/lab7">Lab 7</a>
 			<a href="https://yacobjee.github.io/art101/lab8">Lab 8</a>
 			<a href="https://yacobjee.github.io/art101/lab9">Lab 9</a>
+			<a href="https://yacobjee.github.io/art101/lab10">Lab 10</a>
 		</nav>
 	</main>
 </body>
