--- a/lab9/index.html
+++ b/lab9/index.html
@@ -57,6 +57,7 @@
 			<a href="https://yacobjee.github.io/art101/lab7">Lab 7</a>
 			<a href="https://yacobjee.github.io/art101/lab8">Lab 8</a>
 			<a href="https://yacobjee.github.io/art101/lab9">Lab 9</a>
+			<a href="https://yacobjee.github.io/art101/lab10">Lab 10</a>
 		</nav>
 	</main>
 </body>
