--- a/lab10/index.html
+++ b/lab10/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 3 - File Structure & File Transfer</title>
+	<title>Lab 10 - Javascript Events and Forms</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -17,43 +17,40 @@
 	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
-	<script type="text/javascript" src="./js/lab.js" DEFER></script>
+	<script src="js/lab.js" defer></script>
 </head>
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab 3 - File Structure & File Transfer</h1>
+			<h1>Lab 10 - Javascript Events and Forms</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Create a local, organized file structure, add index.html files, and upload it to the server</p>
+					<p>Work with Javascript Events to either sort an inputted name or make an anagram.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>There weren't many problems, aside from self imposed ones in trying to go beyond and make the homepage more to my style. Eventually they were either resolved or
-						the ideas were abandoned in favor of completeness. Additionally, the simpleness minimized partner work.
-					</p>
+					<p>The only problems I had was trying to figure out how to make an anagram, which confused me when I looked it up. Honestly if I tried to reverse it with a for loop, 
+						I could probably do it, or imported public classes as stackoverflow told me to do so to create a reverse() function. However, it confused me, so I didn't do so. 
+						Perhaps if I learn more about for loops in javascript compared to python, I might be able to do this assignment again.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>This lab went incredibly smoothly, mostly because the lab was already completed in the template. There were some things added, but i personally didn't put a lot of effort into 
-						making astonishing changes or demonstrated exceptional work, but at least I now understand how iterating through files works. It'll come in handy when coding concepts like loops and
-						recursion come into play. </p>
+					<p>Since Wes mainly posted all of the code for this assignment, I wanted to come in and try to make an anagram funciton myself. 
+						However, I quicky gave up when I got confused and wasn't sure if I was allowed to use public classes or for loops and the like. 
+						Honestly I could probably do it by applying myselfa bt more, but at least I tried to make an anagram. </p>
 			</div>
+
 
 			<div class="minor-section">
 					<h2>Results</h2>
 					<div id="output">
-						<img class="screenshots" src="./img/file-structure.jpg">
-						<p>File structure, organized correctly</p>
-						<img class="screenshots" src="./img/homepage-index.jpg">
-						<p>HTML of the homepage</p>
-						<img class="screenshots" src="./img/homepage.jpg">
-						<p>How the homepage looks on local</p>
-						<img class="screenshots" src="./img/lab3-index.jpg">
-						<p>HTML of Lab 3</p>
+						<h1 id="hello-world">Hello World!</h1>
+						<input type="input" id="getit">
+						<button id="my-button">Press Me to Sort!</button>
+
 					</div>
 			</div>
 		</section>
