--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<!-- Set viewport so page remains consistently scaled w narrow devices -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+	<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+
 	<!-- Include a sitewide CSS file for consistent styling across the site -->
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 	<!-- Lab-specifc CSS file for any special styling of this particular page -->
@@ -44,6 +46,7 @@
 					<li><a href="lab8/index.html">Lab 8 - Anonymous Functions and Callbacks</a></li>
 					<li><a href="lab9/index.html">Lab 9 - Javascript for the Web</a></li>
 					<li><a href="lab10/index.html">Lab 10 - Javascript Events and Forms</a></li>
+					<li><a href="lab11/index.html">Lab 11 - Libraries and jQuery</a></li>
 
 				</ul>
 			</div>
@@ -61,6 +64,7 @@
 			<a href="https://yacobjee.github.io/art101/lab8">Lab 8</a>
 			<a href="https://yacobjee.github.io/art101/lab9">Lab 9</a>
 			<a href="https://yacobjee.github.io/art101/lab10">Lab 10</a>
+			<a href="https://yacobjee.github.io/art101/lab11">Lab 11</a>
 		</nav>
 	</main>
 </body>
