--- a/lab11/index.html
+++ b/lab11/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 6 - Objects & Arrays</title>
+	<title>Lab 11 - Subject/Topic</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -17,44 +17,40 @@
 	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
-	<script type="text/javascript" src="./js/lab.js" DEFER></script>
+	<script src="js/lab.js" defer></script>
 </head>
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab 6 - Objects & Arrays</h1>
-			<img class="screenshots" src="./img/hondacrv.jpg">
-			<div class="minor-section">
+			<h1>Lab 11 - Libraries and jQuery</h1>
+			<div class="minor-section" id="challenge">
 					<h2>Challenge</h2>
-					<p>Work with javascript arrays and objects, while also printing them out.</p>
+					<p>Work with jQuery to create listenable events through buttons.</p>
 			</div>
 
-			<div class="minor-section">
+			<div class="minor-section" id="problems">
 					<h2>Problems</h2>
-					<p>Aside from basic syntax errors while working in chrome, there was some confusion on how to print out objects neatly. Before seeing the step 
-						(and not knowing how to stringify at first), I tried to just havce it print in console as is, resulting in [object Object]. Apparently, that's normal, since
-						printing objects is a bit troublesome. I resorted to simply hardcoding a shaky sentence, before seeing the next step.</p>
+					<p>There were a lot of formatting issues, cases where I'd make typos or wouldn't understand how to format both jQuery and CSS.
+						I tried to give the result buttons seperate colors that would change like they do now,
+						but for whatever reason assigning them speciifc colors outside of the default css i gave all buttons 
+						would completely break the functions, and I couldn't get the toggleClass to work at all. I have absolutely no idea why that's the case,
+						and simply removing the id CSS allowed it to work.</p>
 			</div>
 
-			<div class="minor-section">
+			<div class="minor-section" id="reflection">
 					<h2>Reflection</h2>
-					<p>I came in here still a bit confused about java, doubly so when I found there were a bunch of functions and shortcuts I could use like scriptify. I wanted to 
-						truly get my footing with this assignment, and I think I'm starting to get it. At least with this, I think searching the internet for those extra tags
-						will help a lot.</p>
+					<p>I'm honestly really frustrated at jQuery, but that's my own fault. I can see how it works now, and how it makes javascript so much easier.
+						Perhaps because everything got simplified it's now a little foreign to me, and that's porobably the cause of most of my issues now.
+						I think with time I should be able to adjust and hopefully not make the same nmistakes this time. </p>
 			</div>
 
-			<div class="minor-section">
+			<div class="minor-section" id="results">
 					<h2>Results</h2>
-					<div id="output">
-						<h3>Script Output</h3>
-
-						<script type="text/javascript" src="js/lab.js"></script>
-					</div>
+					<div id="output"></div>
 			</div>
 		</section>
 		<nav id="links">
-			<!-- Put links to labs here. -->
 			<!-- Put links to labs here. -->
 			<a href="https://yacobjee.github.io/art101/">Homepage</a> 
 			<a href="https://yacobjee.github.io/art101/lab2">Lab 2</a>
