--- a/lab7/index.html
+++ b/lab7/index.html
@@ -63,6 +63,7 @@
 			<a href="https://yacobjee.github.io/art101/lab8">Lab 8</a>
 			<a href="https://yacobjee.github.io/art101/lab9">Lab 9</a>
 			<a href="https://yacobjee.github.io/art101/lab10">Lab 10</a>
+			<a href="https://yacobjee.github.io/art101/lab11">Lab 11</a>
 		</nav>
 	</main>
 </body>
