--- a/lab11/index.html
+++ b/lab11/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 11 - Subject/Topic</title>
+	<title>Lab 11 - Libraries and jQuery</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -63,6 +63,7 @@
 			<a href="https://yacobjee.github.io/art101/lab9">Lab 9</a>
 			<a href="https://yacobjee.github.io/art101/lab10">Lab 10</a>
 			<a href="https://yacobjee.github.io/art101/lab11">Lab 11</a>
+			<a href="https://yacobjee.github.io/art101/lab12">Lab 12</a>
 		</nav>
 	</main>
 </body>
