--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 					<li><a href="lab9/index.html">Lab 9 - Javascript for the Web</a></li>
 					<li><a href="lab10/index.html">Lab 10 - Javascript Events and Forms</a></li>
 					<li><a href="lab11/index.html">Lab 11 - Libraries and jQuery</a></li>
+					<li><a href="lab12/index.html">Lab 12 - Condtionals</a></li>
 
 				</ul>
 			</div>
@@ -65,6 +66,7 @@
 			<a href="https://yacobjee.github.io/art101/lab9">Lab 9</a>
 			<a href="https://yacobjee.github.io/art101/lab10">Lab 10</a>
 			<a href="https://yacobjee.github.io/art101/lab11">Lab 11</a>
+			<a href="https://yacobjee.github.io/art101/lab12">Lab 12</a>
 		</nav>
 	</main>
 </body>
