--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 					<li><a href="lab10/index.html">Lab 10 - Javascript Events and Forms</a></li>
 					<li><a href="lab11/index.html">Lab 11 - Libraries and jQuery</a></li>
 					<li><a href="lab12/index.html">Lab 12 - Condtionals</a></li>
+					<li><a href="lab13/index.html">Lab 13 - Loops</a></li>
 
 				</ul>
 			</div>
@@ -67,6 +68,7 @@
 			<a href="https://yacobjee.github.io/art101/lab10">Lab 10</a>
 			<a href="https://yacobjee.github.io/art101/lab11">Lab 11</a>
 			<a href="https://yacobjee.github.io/art101/lab12">Lab 12</a>
+			<a href="https://yacobjee.github.io/art101/lab13">Lab 13</a>
 		</nav>
 	</main>
 </body>
