--- a/lab13/index.html
+++ b/lab13/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 9 - Javascript for the Web</title>
+	<title>Lab 13 - Loops</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -17,28 +17,31 @@
 	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
-	<script src="js/lab.js" defer></script>
+	<script src="js/lab.js" DEFER></script>
 </head>
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab 9 - Javascript for the Web</h1>
+			<h1>Lab 13 - Loops</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Work with Javascript and practice DOM manipulation.</p>
+					<p>Work with for and while loops to create a FizzBuzz function, which iterates through the bnumbers 1-200.
+						If the number is a mul;tiple of 3, print "Fizz", 5 is "Buzz," and 7 is "Boom." If the nnumber is a combination 
+						of these factors, combine the printed statements into somehting like "Fizzbuzz."
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>Aside from needing to go back and check on how to format the DOM manipulation and where exactly to start, I didn't have much trouble. I did need to look up how to place 
-						the element before the others with prepend rather than appendChild, but that was pretty simple. </p>
+					<p>Not many problems shwoed up, though I wasn't sure how to initialize the function with jquery. brandon helped me out witht hat, so now I know about document(ready).</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>To be blunt, DOM manipulation is difficult. I constantly had to look for reference, and had a little trouble figuring out where I was supposed to start even when the instructions
-						were laid out for me. I suppose this will take a little bit of practice, though looking up some extra methods was pretty interesting, like prepend. </p>
+					<p>I didn't really put any extra effort beyond what was necessary, honestly just wanting to get this assingment done.
+						I'm glad to be working with loops again, though, as they're familiar. They're worded differently than in python, and in some cases a bit more troublesome to format.
+						I'm curious to see how jQuery can make looping through elements in an array easier. </p>
 			</div>
 
 			<div class="minor-section">
