--- a/lab3/index.html
+++ b/lab3/index.html
@@ -71,6 +71,7 @@
 			<a href="https://yacobjee.github.io/art101/lab10">Lab 10</a>
 			<a href="https://yacobjee.github.io/art101/lab11">Lab 11</a>
 			<a href="https://yacobjee.github.io/art101/lab12">Lab 12</a>
+			<a href="https://yacobjee.github.io/art101/lab13">Lab 13</a>
 		</nav>
 	</main>
 </body>
