--- a/lab12/index.html
+++ b/lab12/index.html
@@ -31,7 +31,11 @@
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>Not many problems shwoed up, everything went pretty smoothly. Trying to add jquery in messed it up, most likely since having the .value is something different in jquery language. </p>
+					<p>Not many problems shwoed up, everything went pretty smoothly. Trying to add jquery in messed it up, most likely since having the .value is something different in jquery language.</p> 
+					<p>After understanding how pure javascript is affected and formatted by jquery, I went back and replaced the raw html with jquery, shortening the overall process and simplifying it.
+						The main problemlies in the fact that I didn't know how value was cahnged, as in jquery it's written as val(). Going back and changing the whole thing allowed the function to still
+						work, and allowed a simpler reading when reviewed. 
+					</p>
 			</div>
 
 			<div class="minor-section">
@@ -45,7 +49,7 @@
 					<h2>Results</h2>
 					<p>Please enter your name for sorting.</p>
 					<input type="text" id="input">
-					<button id="button">Submit</button>
+					<button id="myButton">Submit</button>
 					<div id="output"></div>
 					
 			</div>
