--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 					<li><a href="lab11/index.html">Lab 11 - Libraries and jQuery</a></li>
 					<li><a href="lab12/index.html">Lab 12 - Condtionals</a></li>
 					<li><a href="lab13/index.html">Lab 13 - Loops</a></li>
+					<li><a href="lab14/index.html">Lab 14 - Debugging Tools & Strategies</a></li>
 
 				</ul>
 			</div>
@@ -69,6 +70,7 @@
 			<a href="https://yacobjee.github.io/art101/lab11">Lab 11</a>
 			<a href="https://yacobjee.github.io/art101/lab12">Lab 12</a>
 			<a href="https://yacobjee.github.io/art101/lab13">Lab 13</a>
+			<a href="https://yacobjee.github.io/art101/lab14">Lab 14</a>
 		</nav>
 	</main>
 </body>
