--- a/lab4/index.html
+++ b/lab4/index.html
@@ -117,6 +117,7 @@
 			<a href="https://yacobjee.github.io/art101/lab11">Lab 11</a>
 			<a href="https://yacobjee.github.io/art101/lab12">Lab 12</a>
 			<a href="https://yacobjee.github.io/art101/lab13">Lab 13</a>
+			<a href="https://yacobjee.github.io/art101/lab14">Lab 14</a>
 		</nav>
 	</main>
 </body>
