--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 					<li><a href="lab12/index.html">Lab 12 - Condtionals</a></li>
 					<li><a href="lab13/index.html">Lab 13 - Loops</a></li>
 					<li><a href="lab14/index.html">Lab 14 - Debugging Tools & Strategies</a></li>
+					<li><a href="lab15/index.html">Lab 15 - AJAX</a></li>
 
 				</ul>
 			</div>
@@ -71,6 +72,7 @@
 			<a href="https://yacobjee.github.io/art101/lab12">Lab 12</a>
 			<a href="https://yacobjee.github.io/art101/lab13">Lab 13</a>
 			<a href="https://yacobjee.github.io/art101/lab14">Lab 14</a>
+			<a href="https://yacobjee.github.io/art101/lab15">Lab 15</a>
 		</nav>
 	</main>
 </body>
