--- a/lab12/index.html
+++ b/lab12/index.html
@@ -70,6 +70,7 @@
 			<a href="https://yacobjee.github.io/art101/lab12">Lab 12</a>
 			<a href="https://yacobjee.github.io/art101/lab13">Lab 13</a>
 			<a href="https://yacobjee.github.io/art101/lab14">Lab 14</a>
+			<a href="https://yacobjee.github.io/art101/lab15">Lab 15</a>
 		</nav>
 	</main>
 </body>
