--- a/lab16/index.html
+++ b/lab16/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 7 - Functions</title>
+	<title>Lab 16 - JSON and APIs</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,32 +23,30 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab 7 - Functions</h1>
+			<h1>Lab 16 - JSON and APIs</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Create a function that takes a user's name and sorts it, then returns the new sorted name.</p>
+					<p>Work with JSON and APIs to create a webpage for an XKCD comic.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>Not many problems arose, as I didn't put myself too much out there this time. I'm aware that capitals and lowers are sorted differently, so I made 
-                        the function lowercase everything. However, I wasn't sure how to adress uppercasing that specific letter again in the sorted list, so i left it alone and just let it lowercase
-                        everything. This doesn't account for names with all caps, however, but at least everything is sorted somewhat.</p>
+					<p>The only probvlem I had was creating an img tag in jquery, so I just looked it up in stack overflow to figure it out.
+						Additionally, I wasn't sure how working with ajax worked, since i wasn't sure where I was suppsoed to create comicObj, 
+						but then I realized that's jsut where the data variable is meant to be. Figuring out where to start was the core issue.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>I mostly went into this assignment hoping t get it done, and try some things out. That's why I at least put in the lowercase method, though I wish I did more.
-                        I didn't exactly address the problems of differentiating between upper and lowercase, and just opted to lower everything and call it a day.
-
-                    </p>
+					<p>Honestly, this lab wasn't too difificult, though I should probably have put more effort into it, not jst in doing task X 
+						but also in formatting the comic itself. In the end though, I'm glad I can at least understand ajax a little better now, 
+						as I struggled with it a lot beforehand. </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output">
-                        <script src="js/lab.js"></script>
-                    </div>
+					<div id="output"></div>
 			</div>
 		</section>
 		<nav id="links">
