--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 					<li><a href="lab13/index.html">Lab 13 - Loops</a></li>
 					<li><a href="lab14/index.html">Lab 14 - Debugging Tools & Strategies</a></li>
 					<li><a href="lab15/index.html">Lab 15 - AJAX</a></li>
+					<li><a href="lab16/index.html">Lab 16 - JSON and API's</a></li>
 
 				</ul>
 			</div>
@@ -73,6 +74,7 @@
 			<a href="https://yacobjee.github.io/art101/lab13">Lab 13</a>
 			<a href="https://yacobjee.github.io/art101/lab14">Lab 14</a>
 			<a href="https://yacobjee.github.io/art101/lab15">Lab 15</a>
+			<a href="https://yacobjee.github.io/art101/lab16">Lab 16</a>
 		</nav>
 	</main>
 </body>
