--- a/lab11/index.html
+++ b/lab11/index.html
@@ -67,6 +67,7 @@
 			<a href="https://yacobjee.github.io/art101/lab13">Lab 13</a>
 			<a href="https://yacobjee.github.io/art101/lab14">Lab 14</a>
 			<a href="https://yacobjee.github.io/art101/lab15">Lab 15</a>
+			<a href="https://yacobjee.github.io/art101/lab16">Lab 16</a>
 		</nav>
 	</main>
 </body>
